tests/should_fail/bug/1544_1.stderr
error[E0046]: not all trait items implemented, missing: `Output`, `add`
  --> 1544_1.rs:10:1
   |
10 | impl<const X: usize> AddLogic for S<X> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `Output`, `add` in implementation
   |
   = help: implement the missing item: `type Output = /* Type */;`
   = help: implement the missing item: `fn add(self, _: S<X>) -> <Self as creusot_contracts::logic::ops::AddLogic<S<X>>>::Output { todo!() }`

error[E0046]: not all trait items implemented, missing: `eq`
  --> 1544_1.rs:17:1
   |
17 | impl<I, const D: usize> creusot_contracts::PartialEq for BaseCurrency<I, D> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `eq` in implementation
   |
   = help: implement the missing item: `fn eq(&self, _: &BaseCurrency<I, D>) -> bool { todo!() }`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0046`.
